# capituber

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  builder.ps1
client/: package-lock.json  package.json  tsconfig.json
client/src/: config.ts  microphone.ts  model.ts  sensor.ts
models/: ReadMe.txt
models/std/: model.json
src/: main.rs  model.rs  routes.rs  transform.rs
static/css/: styles.css
static/js/: config.js  model.js  utilities.js
templates/: base.html.tera  config.html.tera  home.html.tera  index.html.tera  model.html.tera
