[package]
name = "capituber"
version = "0.0.1"
edition = "2021"
description = "CapiTube, a PNGTuber App"
build = "build.rs"


[build-dependencies]
winresource = "0.1.16"

[package.metadata.winresource]
LegalCopyright = "MPL 2.0 (Nyshimori Mizuki)"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
futures = "0.3.28"
local-ip-address = "0.5.3"
